# fastapi_chat

./: .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/src/: alembic.ini  connection_manager.py  database.py  dependencies.py  main.py  models.py  repository.py  schemas.py  security.py
backend/src/alembic/: env.py
backend/src/alembic/versions/: 1a11e4dcd162_initial_migration_with_users_table.py  91a4f0c8db07_initial_migration_with_users_table.py  c26beb1630bd_refactor_user_message_and_attachment_.py  dee5ea463510_initial_migration_with_users_table.py
backend/src/routers/: auth.py  messages.py  users.py  websockets.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatWindow.tsx  ProtectedRoute.tsx  UserList.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: ChatPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/services/: apiService.ts  authService.ts
frontend/src/types/: index.ts
